--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,13 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
     
+    <FilesMatch "\.(env|htaccess|htpasswd|ini|log|sh|sql)$">
+        Order Allow,Deny
+        Deny from all
+    </FilesMatch>
+    
+    RewriteRule ^(config|includes|vendor)/.*\.php$ - [R=404,L]
+    
     RewriteCond %{HTTP_HOST} !^www\. [NC]
     RewriteRule ^(.*)$ https://www.%{HTTP_HOST}/$1 [R=301,L]
     
